[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/tiles/CarCutscene.png" type="Texture" id=1]
[ext_resource path="res://Charecters/DummyPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Scoreboard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cutscenes/CarCutscene.gd" type="Script" id=4]
[ext_resource path="res://UI/Load.tscn" type="PackedScene" id=5]
[ext_resource path="res://Props/Truck.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/DialogBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/player/weapons/Rocket Launcher.png" type="Texture" id=8]
[ext_resource path="res://UI/Pause.tscn" type="PackedScene" id=9]

[node name="CarCutscene" type="Node2D"]
script = ExtResource( 4 )
level1 = "res://Levels/MainScene.tscn"

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 40 )
current = true
zoom = Vector2( 0.2, 0.2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Scoreboard" parent="CanvasLayer" instance=ExtResource( 3 )]
hidden = true

[node name="Load" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="GiveGun" parent="CanvasLayer" instance=ExtResource( 7 )]
dialog = PoolStringArray( "Unfortunate that a newbie like you has to deal with this region.", "Infection rates in this area have been abnormally high.", "Anyway, here is your sanitization launcher." )

[node name="GiveTracker" parent="CanvasLayer" instance=ExtResource( 7 )]
dialog = PoolStringArray( "Hold and release left mouse button to shoot. WASD to move.", "Don\'t forget to use the tracker that I gave you." )

[node name="Goodbye" parent="CanvasLayer" instance=ExtResource( 7 )]
dialog = PoolStringArray( "Remember, if too many innocents get infected, you fail the mission.", "Good Luck! Hopefully you don\'t run into...", "Nevermind." )

[node name="Pause" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="DummyPlayer" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 6, 32 )

[node name="Launcher" type="Sprite" parent="."]
visible = false
position = Vector2( 10, 25 )
texture = ExtResource( 8 )

[node name="truck" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 32 )

[node name="Tween" type="Tween" parent="."]
